tests/integration/formats/errors/xpath-invalid-text.txt
=== stderr ===
fatal(xpath): Parse error
1 | //class[bad=(
                 ^

=== stdout ===
1 fatal in 0 files
